syntax = "proto3";

import "common/location.proto";

message StallingGent {
    string time = 1;
    string facilityname = 2;
    string id = 3;
    int32 totalplaces = 4;
    int32 freeplaces = 5;
    int32 occupiedplaces = 6;
    int32 bezetting = 7;
    common.Location location = 8;
}