syntax = "proto3";
package poles;

import "google/protobuf/timestamp.proto";

message PoleData {
    string code = 1;
    string locatie = 2;
    string datum = 3;
    string uur5minuten = 4;
    google.protobuf.Timestamp ordening = 5;
    int32 totaal = 6;
    int32 tegenrichting = 7;
    int32 hoofdrichting = 8;
}
